# jwt-forward-auth

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yaml
.github/workflows/: build_and_deploy.yaml
src/: args.rs  main.rs  probes.rs  tracing_cfg.rs
src/utils/: atomic_instant.rs  header_val.rs  mod.rs  reloadable.rs  shutdown.rs
src/validator_file/: error.rs  file.rs  mod.rs
src/validators/: authority.rs  claims.rs  jwks.rs  mod.rs  store.rs  validator.rs
